3822B1PE2/7_gemm_cublas/chernova_natalia/log.txt
/home/crazyproger/sandbox/gpu-2025/3822B1PE2/7_gemm_cublas/chernova_natalia/gemm_cublas.cu(13): error: namespace "std" has no member "cerr"
          std::cerr << "Error: Matrix sizes don't match!" << std::endl;
               ^

/home/crazyproger/sandbox/gpu-2025/3822B1PE2/7_gemm_cublas/chernova_natalia/gemm_cublas.cu(13): error: namespace "std" has no member "endl"
          std::cerr << "Error: Matrix sizes don't match!" << std::endl;
                                                                  ^

2 errors detected in the compilation of "/home/crazyproger/sandbox/gpu-2025/3822B1PE2/7_gemm_cublas/chernova_natalia/gemm_cublas.cu".
